# src/apis/folders/routes.js
@@ -1,4 +1,8 @@
 const express = require("express");
 const router = express.Router();
+const controllers = require("./controllers");
+
+router.get("/", controllers.readFolders);
+router.get("/:id", controllers.readFolderById);
 
 module.exports = router;
